Fix tooltip placement (caused flickering tooltip)

--- a/client/main.styl
+++ b/client/main.styl
@@ -88,7 +88,7 @@ body
   display: block
   position: absolute
   z-index: 99
-  left: calc(var(--palette-size) - var(--palette-border))
+  left: var(--palette-size)
   width: var(--tooltip-width)
   padding: 5px 8px
   font-size: 16px
